@@ -1,3 +1,8 @@
+2012-04-27  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR target/53138
+	* config/i386/i386.md (x86_mov<mode>cc_0_m1_neg): Add clobber.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
